src/objects/ACETLGT_Confetti__c.object
<CustomObject>
    <fields>
        <fullName>Case_Count__c</fullName>
        <label>Case Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Header_Message__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Header Message</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Milestone__c</fullName>
        <label>Milestone</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Profile_List__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Profile List</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>RecordID__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>RecordID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SubHeader_Message__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>SubHeader Message</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UserId__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>UserId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sObject_Query__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>sObject Query</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <label>ACET Confetti</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>CONF-{000}</displayFormat>
        <label>ACET Confetti Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>ACET Confetti</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>